hw7/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  clusterIP: None
  ports:
    - name: amqp
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: admin
      protocol: TCP
      port: 19090
      targetPort: 19090
  selector:
    app: prometheus
